<?xml version="1.0" encoding="utf-8"?>

<!--Chenthuran Dharmapalan, Student Number: 301077615, Section: 002 -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="chenthuran.dharmapalan.s301077615.ui.home.DharmapalanFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="chenthuran.dharmapalan.s301077615.ui.dashboard.ChenthuranFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="chenthuran.dharmapalan.s301077615.ui.notifications.S301077615Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>